@startuml ClassDiagram
top to bottom direction

package com.example {
    class App {
        +main(String[] args)
        +start(Stage stage)
        -createMenuBar(PerspectiveView, PerspectiveView, ThumbnailView): MenuBar
        -handleUploadImage(PerspectiveView, PerspectiveView, ThumbnailView)
        -handleSave(Stage, PerspectiveView)
    }

    class CommandManager {
        -static CommandManager instance
        -Stack<ICommand> commandStack
        -Stack<ICommand> redoStack
        +static getInstance(): CommandManager
        +pressTranslate(ICommand)
        +pressZoom(ICommand)
        +pressSave(ICommand)
        +pressLoad(ICommand)
        +undoLastCommand()
        +redoLastCommand()
    }

    interface ICommand {
        +execute()
        +undo()
    }

    class TranslateUpCommand {
        -Perspective perspective
        +TranslateUpCommand(Perspective)
        +execute()
        +undo()
    }

    class TranslateDownCommand {
        -Perspective perspective
        +TranslateDownCommand(Perspective)
        +execute()
        +undo()
    }

    class TranslateLeftCommand {
        -Perspective perspective
        +TranslateLeftCommand(Perspective)
        +execute()
        +undo()
    }

    class TranslateRightCommand {
        -Perspective perspective
        +TranslateRightCommand(Perspective)
        +execute()
        +undo()
    }

    class ZoomInCommand {
        -Perspective perspective
        +ZoomInCommand(Perspective)
        +execute()
        +undo()
    }

    class ZoomOutCommand {
        -Perspective perspective
        +ZoomOutCommand(Perspective)
        +execute()
        +undo()
    }

    class SaveImageCommand {
        -Perspective perspective
        -ImageModel imageModel
        -String imagePath
        -String newPath
        +SaveImageCommand(Perspective, String, ImageModel, String)
        +execute()
        +undo()
    }

    class ImageController {
        -ImageModel model
        -Perspective perspective
        -ImageView imageView
        -CommandManager commandManager
        +ImageController(Perspective, ImageView)
        +ImageController(ImageModel, ImageView)
        +handleZoomIn()
        +handleZoomOut()
        +handleTranslateLeft()
        +handleTranslateRight()
        +handleTranslateUp()
        +handleTranslateDown()
        +handleUndo()
        +handleRedo()
        +handleSave(String, String)
    }

    class ImageModel {
        -Image image
        +setImage(Image)
        +getImage(): Image
        +loadImage(File)
    }

    class Perspective {
        -double x
        -double y
        -double scale
        -List<Observer> observers
        +attach(Observer)
        +detach(Observer)
        +notifyObserver()
        +getScale(): double
        +getX(): double
        +getY(): double
        +zoomIn()
        +zoomOut()
        +translateLeft()
        +translateRight()
        +translateUp()
        +translateDown()
    }

    interface Observer {
        +update()
    }

    class PerspectiveView {
        -ImageView imageView
        -ImageModel image
        -Perspective perspective
        -ImageController controller
        -Button zoomIn
        -Button zoomOut
        -Button translateLeft
        -Button translateRight
        -Button translateUp
        -Button translateDown
        -Pane container
        -double screenHeight
        -double screenWidth
        +PerspectiveView()
        -setButtonActions()
        +getView(): VBox
        +update()
        +loadImage(File)
        +saveImage(String, String)
    }

    class ThumbnailView {
        -ImageView imageView
        -ImageModel image
        -ImageController controller
        -double screenHeight
        -double screenWidth
        +ThumbnailView()
        +getView(): HBox
        +update()
        +loadImage(File)
    }
}

App --> PerspectiveView
App --> ThumbnailView

CommandManager --> ICommand

TranslateUpCommand --> ICommand
TranslateUpCommand --> Perspective

TranslateDownCommand --> ICommand
TranslateDownCommand --> Perspective

TranslateLeftCommand --> ICommand
TranslateLeftCommand --> Perspective

TranslateRightCommand --> ICommand
TranslateRightCommand --> Perspective

ZoomInCommand --> ICommand
ZoomInCommand --> Perspective

ZoomOutCommand --> ICommand
ZoomOutCommand --> Perspective

SaveImageCommand --> ICommand
SaveImageCommand --> Perspective
SaveImageCommand --> ImageModel

ImageController --> ImageModel
ImageController --> Perspective
ImageController --> CommandManager
ImageController --> ICommand

Perspective --> Observer

PerspectiveView --> ImageModel
PerspectiveView --> Perspective
PerspectiveView --> ImageController
PerspectiveView --> Observer

ThumbnailView --> ImageModel
ThumbnailView --> ImageController
ThumbnailView --> Observer

@enduml